# learning-lens

./: README.md  learning-lens.cabal  stack.yaml
doc/: Lesson01.md  Lesson02.md  Lesson03.md
src/: Exercise01.hs  Exercise02.hs
